2008-12-18  Hans Breuer  <hans@breuer.org>

	* app/properties.[ch] : renamed to properties-dialog.* to have unique
	filenames (avoids debugger confusion)
	* app/Makefile.am app/makefile.msc app/makefile.mingw
	  app/commands.c app/defaults.c app/diagram.c app/diagram_tree.c
	  app/modify_tool.c : adapted accordingly

	* app/properties-dialog.c : restored nullification of the static 
	'object_part' on dialog destroy to avoid double destruction

2008-12-14  Hans Breuer  <hans@breuer.org>

	* lib/textline.[ch] : removed obsolete RenderCache stuff while 
	investigating bug #562574

	* app/preferences.[ch] lib/filter.[ch] lib/libdia.def : allow to select
	a preferred export filter used when selecting exporter by extension

	* lib/persistence.c : don't use g_ascii_strncasecmp as GCompareFunc,
	fixing crashes introduced by patch from bug #559671
	
	* app/diagram.[ch] app/display.c : replace Diagram::display_count with
	g_slist_count(diagram->displays), no benefit in keeping both in sync.

2008-12-09  Hans Breuer  <hans@breuer.org>

	* lib/diasvgrenderer.c lib/persistence.c lib/prop_basic.c : reduced
	use of long time deprecated functions ( Kjartan Maraas, bug #559671)

	* objects/Database/table.c app/preferences.c : fixed the fix and a
	comment about it (Sameer Sahasrabuddhe, bug #60331)

2008-12-08  Hans Breuer  <hans@breuer.org>

	* objects/UML/class.c : don't crash when 
	umlclass_apply_props_from_dialog() get callesd without 
	umlclass_get_properties(), instead fall back to 
	object_apply_props_from_dialog() than
	* objects/Database/table.c : same here
	
	* app/properties.c : for a single object let Object::get_properties()
	create the "object part" of the property dialog

	* plug-ins/makefile.msc : remove obsolete plug-ins from build

2008-12-07  Hans Breuer  <hans@breuer.org>

	* app/commands.c app/diagram_tree.c app/modify_tool.c app/properties.c
	  app/properties.h lib/group.c lib/object.h lib/propdesc.c 
	  lib/propdialogs.c lib/properties.h lib/propinternals.h